--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,27 +1,32 @@
 .hero-area {
     width: 100%;
     background-size: cover;
-    min-height: 60vh;
+    min-height: 40vh;
     padding: 85px 0;
     background-color: #eee;
+    scroll-margin-top: 90px;
+    overflow: hidden;
 }
 .hero-area h2 {
     font-size: 50px;
     font-weight: 600;
     margin-bottom: 20px;
-    color: var(--color-secondary);
-    font-family: var(--font-primary);
+    color: #37373f;
+    font-family: 'Amatic SC', cursive;
 }
 .hero-area img {
     max-width: 100%;
-    height: auto;
+    height: 100%;
 }
 .hero-area p {
     color: #4f4f5a;
-    font-weight: 400;
+    font-weight: 500;
     margin-bottom: 30px;
 }
-
+.hero-area button {
+    background-color: rgba(206, 18, 18, 0.8);
+    color:#ffffff;
+}
 
 
 @media (max-width: 991px) {
