--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -6,7 +6,7 @@
     
 }
     .Contact-form {
-        width: 90%;
+        width: 95%;
         margin-top: 30px;
         padding: 35px;
         background: #fff;
@@ -37,7 +37,7 @@
     .Contact-form .contact-button {
         background: rgba(206, 18, 18, 0.8);
         border: 0;
-        padding: 12px 256px;
+        padding: 10px 40px;
         color: #fff;
         transition: 0.4s;
         border-radius: 50px;
@@ -45,7 +45,7 @@
     .follow-us {
         background-color: #fff;
         width: 100%;
-        margin-top: 40px;
+        margin-top: 25px;
         border-radius: 50px;
     }
     .follow-us h4 {
@@ -60,7 +60,7 @@
         font-size: 25px;
         text-align: center;
         padding-top: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
         
     }
     .facebook-icon {
@@ -84,3 +84,23 @@
         width: 100%;
         height: auto;
     }
+
+    @media (max-width: 991px) {
+        .follow-us {
+            margin-top: 15px;
+            border-radius: 50px;
+        }
+        .Contact-form .contact-button {
+            
+            padding: 12px 25px;
+            color: #fff;
+            transition: 0.4s;
+            border-radius: 50px;
+        }
+        .Contact-form {
+            width: 100%;
+            margin-top: 30px;
+            padding: 35px;
+            
+        }
+        }
