--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -66,6 +66,7 @@
     .facebook-icon {
         text-align: center;
         font-size: 20px;
+        padding-bottom: 10px;
     }
     .f-icon {
         color: blue;
@@ -74,13 +75,14 @@
     .whatsapp-icon {
         text-align: center;
         font-size: 20px;
+        padding-bottom: 10px;
     }
     .w-icon {
         color: green;
         font-size: 30px;
     }
     .contact-img img {
-        padding: 40px;
+        padding: 20px;
         width: 100%;
         height: auto;
     }
