--- a/src/components/AboutText/AboutText.css
+++ b/src/components/AboutText/AboutText.css
@@ -29,3 +29,33 @@
     margin-bottom: 1rem;
     padding: 18px;
 }
+
+@media only screen and (max-width: 991px){
+    .about-img img {
+        max-width: 100%;
+        height: auto;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 0;
+        margin-top: 20px;
+        padding-left: 40px;
+        padding-right: 40px;
+    
+    }
+    .about-text {
+        margin-top: 0;
+        padding: 20px;
+        
+    }
+    .about-text h2 {
+        padding: 10px;
+        margin-top: 20px;
+        font-size: 1.9rem;
+    }
+    .about-text p {
+        font-size: 16px;
+        margin-bottom: 1rem;
+        padding: 18px;
+    }
+
+}
