--- a/src/components/Booking/Booking.css
+++ b/src/components/Booking/Booking.css
@@ -11,3 +11,10 @@
     font-size: 20px;
     
 }
+.sign-link {
+    margin-bottom: 8px;
+    font-weight: 400 !important;
+    color: gold !important;
+    display: inline-block !important;
+    padding-left: 10px !important;
+}
